--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
   <!-- custom css file link -->
-  <link rel="stylesheet" href="CSS/index.css">
+  <link rel="stylesheet" href="index.css">
 
 </head>
 <body>
@@ -436,7 +436,7 @@
 
 
   <!-- custom js file link -->
-  <script src="JS/Script.js"></script>
+  <script src="Script.js"></script>
 
 </body>
 </html>
