--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <!-- custom css file link -->
   <link rel="stylesheet" href="index.css">
+  <link rel="icon" href="images/m.png">
 
 </head>
 <body>
